--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "@sanalabs/json": "^0.1.9"
+    "redis": "^4.1.0"
+  },
+  "devDependencies": {
+    "@swc-node/register": "^1.5.1",
+    "@types/node": "^18.0.0",
+    "typescript": "^4.7.4"
   }
 }
