--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
-    "redis": "^4.1.0"
+    "pg": "^8.7.3",
+    "redis": "^4.1.0",
+    "sql-template-strings": "^2.2.2",
+    "typed-regex": "^0.0.8",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
     "@swc-node/register": "^1.5.1",
     "@types/node": "^18.0.0",
+    "@types/pg": "^8.6.5",
     "typescript": "^4.7.4"
   }
 }
