--- a/workspace/services/server/package.json
+++ b/workspace/services/server/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "dev": "ts-node-dev --transpile-only server.ts"
+  },
   "dependencies": {
     "pg": "^8.7.3",
     "redis": "^4.1.0",
@@ -7,9 +10,9 @@
     "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@swc-node/register": "^1.5.1",
     "@types/node": "^18.0.0",
     "@types/pg": "^8.6.5",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
 }
