--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "typescript.preferences.importModuleSpecifier": "non-relative"
+  // "typescript.preferences.importModuleSpecifier": "non-relative",
+  "search.exclude": {
+    "**/node_modules": true,
+    "**/.next": true,
+    "**/packages/*/dist": true
+  },
 }
