--- a/workspace/services/server/package.json
+++ b/workspace/services/server/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "dev": "ts-node-dev --transpile-only server.ts"
+    "dev": "ts-node-dev --transpile-only server.ts",
+    "check:ts": "tsc --noEmit"
   },
   "dependencies": {
     "pg": "^8.7.3",
