--- a/pnpm-workspace-root/services/core-server/package.json
+++ b/pnpm-workspace-root/services/core-server/package.json
@@ -1,19 +1,23 @@
 {
+  "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --transpile-only server.ts",
+    "prod": "ts-node --esm --swc server.ts",
+    "dev": "nodemon --ext ts --delay 200ms --exec 'pnpm run prod'",
     "check:ts": "tsc --noEmit"
   },
   "dependencies": {
-    "pg": "^8.7.3",
-    "redis": "^4.1.0",
+    "@workspace/typed-http2-handler": "workspace:*",
+    "pg": "^8.8.0",
+    "redis": "^4.5.1",
     "sql-template-strings": "^2.2.2",
-    "typed-regex": "^0.0.8",
-    "zod": "^3.17.3"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@types/node": "^18.0.0",
-    "@types/pg": "^8.6.5",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4"
+    "@swc/core": "^1.3.25",
+    "@types/node": "^18.11.18",
+    "@types/pg": "^8.6.6",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
