--- a/pnpm-workspace-root/services/core-server/tsconfig.json
+++ b/pnpm-workspace-root/services/core-server/tsconfig.json
@@ -10,17 +10,28 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false,
-    "noEmit": true,
     "esModuleInterop": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "downlevelIteration": true,
-    "noUncheckedIndexedAccess": true
+    "noUncheckedIndexedAccess": true,
+
+    "disableSourceOfProjectReferenceRedirect": true,
+
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+
+    "declarationMap": true,    
+    "declaration": true,
+    "noEmit": true,
+    "composite": true,
+    "incremental": true,
   },
+  "references": [
+    { "path": "../../packages/typed-http2-handler" }
+  ],
   "exclude": ["node_modules", "**/*.test.ts"],
   "include": ["**/*.ts"]
 }
