--- a/pnpm-workspace-root/services/frontend/package.json
+++ b/pnpm-workspace-root/services/frontend/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "check:ts": "tsc --noEmit"
+    "check": "tsc --noEmit"
   },
   "dependencies": {
     "@workspace/common": "workspace:*",
