--- a/pnpm-workspace-root/services/live-server/tsconfig.json
+++ b/pnpm-workspace-root/services/live-server/tsconfig.json
@@ -30,6 +30,7 @@
     "incremental": true,
   },
   "references": [
+    { "path": "../../packages/common" },
     { "path": "../../packages/typed-http2-handler" }
   ],
   "exclude": ["node_modules", "**/*.test.ts"],
