--- a/pnpm-workspace-root/services/live-server/package.json
+++ b/pnpm-workspace-root/services/live-server/package.json
@@ -2,11 +2,11 @@
   "type": "module",
   "scripts": {
     "prod": "ts-node --esm --swc server.ts",
-    "dev": "nodemon --watch . --watch ../../packages/typed-http2-handler/dist --watch ../../packages/common/dist --ext ts,tsx,js,jsx,d.ts --delay 200ms --exec 'pnpm run prod'",
+    "dev": "nodemon --watch . --watch ../../packages/server-common/dist --watch ../../packages/common/dist --ext ts,tsx,js,jsx,d.ts --delay 200ms --exec 'pnpm run prod'",
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@workspace/typed-http2-handler": "workspace:*",
+    "@workspace/server-common": "workspace:*",
     "@workspace/common": "workspace:*",
     "redis": "^4.5.1",
     "zod": "^3.20.2"
