--- a/pnpm-workspace-root/packages/server-common/package.json
+++ b/pnpm-workspace-root/packages/server-common/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "@workspace/typed-http2-handler",
+  "name": "@workspace/server-common",
   "type": "module",
   "scripts": {
     "clean": "rm -rf dist && tsc --build --clean"
   },
   "exports": {
-    ".": "./dist/index.js"
+    "./db": "./dist/db.js",
+    "./typed-http2-handler": "./dist/typed-http2-handler.js"
   },
   "files": [
     "dist/**/*"
@@ -13,11 +14,15 @@
   "dependencies": {
     "@workspace/common": "workspace:*",
     "typed-regex": "^0.0.8",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "pg": "^8.8.0",
+    "redis": "^4.5.1",
+    "sql-template-strings": "^2.2.2"
   },
   "devDependencies": {
     "@tsconfig/strictest": "^1.0.2",
     "@types/node": "^18.11.18",
+    "@types/pg": "^8.6.6",
     "typescript": "^4.9.4"
   }
 }
