--- a/pnpm-workspace-root/services/core-server/package.json
+++ b/pnpm-workspace-root/services/core-server/package.json
@@ -2,20 +2,16 @@
   "type": "module",
   "scripts": {
     "prod": "ts-node --esm --swc server.ts",
-    "dev": "nodemon --watch . --watch ../../packages/typed-http2-handler/dist --ext ts,tsx,js,jsx,d.ts --delay 200ms --exec 'pnpm run prod'",
+    "dev": "nodemon --watch . --watch ../../packages/server-common/dist --ext ts,tsx,js,jsx,d.ts --delay 200ms --exec 'pnpm run prod'",
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@workspace/typed-http2-handler": "workspace:*",
-    "pg": "^8.8.0",
-    "redis": "^4.5.1",
-    "sql-template-strings": "^2.2.2",
+    "@workspace/server-common": "workspace:*",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@swc/core": "^1.3.25",
     "@types/node": "^18.11.18",
-    "@types/pg": "^8.6.6",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
