--- a/pnpm-workspace-root/services/core-server/tsconfig.json
+++ b/pnpm-workspace-root/services/core-server/tsconfig.json
@@ -30,7 +30,7 @@
     "incremental": true,
   },
   "references": [
-    { "path": "../../packages/typed-http2-handler" }
+    { "path": "../../packages/server-common" }
   ],
   "exclude": ["node_modules", "**/*.test.ts"],
   "include": ["**/*.ts"]
