--- a/pnpm-workspace-root/services/live-server/tsconfig.json
+++ b/pnpm-workspace-root/services/live-server/tsconfig.json
@@ -31,7 +31,7 @@
   },
   "references": [
     { "path": "../../packages/common" },
-    { "path": "../../packages/typed-http2-handler" }
+    { "path": "../../packages/server-common" }
   ],
   "exclude": ["node_modules", "**/*.test.ts"],
   "include": ["**/*.ts"]
