--- a/pnpm-workspace-root/packages/common/package.json
+++ b/pnpm-workspace-root/packages/common/package.json
@@ -7,6 +7,7 @@
   "exports": {
     "./id": "./dist/id.js",
     "./types": "./dist/types.js",
+    "./utils": "./dist/utils.js",
     "./assert": "./dist/assert.js",
     "./config": "./dist/config.js",
     "./typed-event-emitter": "./dist/typed-event-emitter.js"
